# Zappy

./: .gitignore  Makefile  README.md
.github/workflows/: main.yml
ai/: Makefile  ai_client.py  client.py  travel.py  zappy_ai
gui/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile
gui/include/: Tokenize.hpp  Utils.hpp
gui/include/Interface/: IDisplay.hpp
gui/src/: Main.cpp  Tokenize.cpp  main.rs
gui/src/ClientGUI/: ClientGUI.cpp  ClientGUI.hpp
gui/src/Components/Button/: Button.cpp  Button.hpp
gui/src/Components/Checkbox/: Checkbox.cpp  Checkbox.hpp
gui/src/Components/Image/: Image.cpp  Image.hpp
gui/src/Components/Slider/: Slider.cpp  Slider.hpp
gui/src/Components/Text/: Text.cpp  Text.hpp
gui/src/Components/TextInput/: TextInput.cpp  TextInput.hpp
gui/src/GameData/: GameData.cpp  GameData.hpp
gui/src/GameData/Egg/: Egg.cpp  Egg.hpp
gui/src/GameData/Player/: Player.cpp  Player.hpp
gui/src/GameData/Tile/: Tile.cpp  Tile.hpp
gui/src/Menu/: Menu.hpp
gui/src/Playground/: Playground.cpp  Playground.hpp
gui/src/Scenes/Menu/: Menu.cpp  Menu.hpp
gui/src/Scenes/Playground/: Playground.cpp  Playground.hpp
gui/src/Simulation/: Simulation.cpp  Simulation.hpp
gui/src/SocketCommunication/: SocketCommunication.cpp  SocketCommunication.hpp
gui/src/Utils/: ErrorHandling.cpp  GetArgs.cpp  Help.cpp
gui/src/ZappyGUI/: ZappyGUI.cpp  ZappyGUI.hpp
server/: .gitignore  Makefile
server/include/: client.h  my_list.h  network.h  parameters.h  server.h  types.h  utils.h
server/include/commands/: commands.h  events.h  functions.h  incantation.h  list.h
server/include/game/: game.h  map.h  player.h  resources.h
server/include/network/: messages.h  network.h
server/lib/my/: .gitignore  Makefile
server/lib/my/include/: my_list.h
server/lib/my/src/list/: my_list_add.c  my_list_operations.c  my_list_remove.c
server/scripts/: coding-style.sh
server/src/: client.c  main.c  server.c
server/src/client/: client.c  disconnect.c  write.c
server/src/commands/: execute.c  handling.c
server/src/commands/ai/: broadcast.c  connect_nbr.c  direction.c  eject.c  fork.c  incantation.c  inventory.c  look.c  objects.c
server/src/commands/functions/: msz.c  sgt.c  sst.c  tna.c
server/src/commands/gui/: msz.c  player.c  sgt.c  sst.c  tiles.c  tna.c
server/src/commands/gui/events/: egg.c  end_game.c  events.c  incantation.c  pbc.c  pdi.c  pex.c  pnw.c  resource.c
server/src/game/: end.c  game.c
server/src/game/map/: future_resource.c  map.c  refill_map.c  refill_tile.c
server/src/game/player/: player.c
server/src/network/: fd_set.c  select.c  socket.c
server/src/network/messages/: parsing.c  read.c
server/src/params/: checks.c  eggs.c  params.c  setters.c
server/src/utils/: direction.c  incantation.c  player.c  random.c  strings.c  teams.c  tile.c  time.c
